tests/wsf/fail/hash_in_import.wsf
"path#with_hash" import
end
